src/test/deca/context/invalid/provided/testi03.deca
//Resultats :
//Erreur contextuelle
//Ligne 5: You can't use void as a type
class A{
    void x;
}